--- a/src/common/LoadingSpinner.css
+++ b/src/common/LoadingSpinner.css
@@ -1,6 +1,6 @@
 .LoadingSpinner {
     margin: 200px auto 0 auto;
-    color: tomato;
+    color: #5f43b2;
     font-size: 24pt;
     font-weight: bold;
     text-align: center;
